[project]
name = "tasave-python"
version = "0.1.0"
description = "Python client for the TasaVE Venezuelan exchange rate API"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["venezuela", "exchange-rate", "bcv", "bolivar"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.21"]

[project.urls]
Homepage = "https://tasave.com"
Repository = "https://github.com/albieu0410-tech/tasaVE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tasave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
